mobile overflow issues

--- a/src/styles/components/_AnimatedIllustration.scss
+++ b/src/styles/components/_AnimatedIllustration.scss
@@ -1,7 +1,7 @@
 .AnimatedIllustration {
   position: relative;
   width: 100%;
-  // overflow: hidden;
+  overflow: hidden;
 
   &__illustration {
     position: absolute;
